Added: Till Pricing

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         id="main-navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo/logo.webp" alt="Logo" height="65px" />
+            <img src="img/logo/logo.png" alt="Logo" height="60px" />
           </a>
           <button
             class="navbar-toggler"
@@ -222,19 +222,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="img/banner/banner01.jpg"
+                src="img/banner/desktop_banner01.jpg"
                 class="d-block w-100"
                 alt="Banner1" />
             </div>
             <div class="carousel-item">
               <img
-                src="img/banner/banner02.jpg"
+                src="img/banner/desktop_banner02.jpg"
                 class="d-block w-100 img-fluid"
                 alt="Banner2" />
             </div>
             <div class="carousel-item">
               <img
-                src="img/banner/banner3.jpg"
+                src="img/banner/desktop_banner03.jpg"
                 class="d-block w-100"
                 alt="Banner3" />
             </div>
@@ -268,24 +268,21 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="img/banner/banner_new_mobile.jpg"
+                src="img/banner/desktop_banner01.jpg"
                 class="d-block w-100 img-fluid"
-                alt="Banner1"
-                onerror="this.src='img/placeholder/placeholder.jpg'" />
+                alt="Banner1" />
             </div>
             <div class="carousel-item">
               <img
-                src="img/banner/Mobile-Banner-02.jpg"
+                src="img/banner/desktop_banner01.jpg"
                 class="d-block w-100 img-fluid"
-                alt="Banner2"
-                onerror="this.src='img/placeholder/placeholder.jpg'" />
+                alt="Banner2" />
             </div>
             <div class="carousel-item">
               <img
-                src="img/banner/Mobile-Banner-03.jpg"
+                src="img/banner/desktop_banner03.jpg"
                 class="d-block w-100 img-fluid"
-                alt="Banner3"
-                onerror="this.src='img/placeholder/placeholder.jpg'" />
+                alt="Banner3" />
             </div>
           </div>
           <button
@@ -310,28 +307,33 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           <span class="d-block info-status text-center effectGradient">
             BOOKING OPEN</span
           >
-          <span class="info-title d-block text-center">Sai World City </span>
+          <span class="info-title d-block text-center">
+            Lodha Villa Royale
+          </span>
           <span class="info-location d-block text-center pb-1">
-            At Navi Mumbai <br />
-            By Paradise Group
+            Central Avenue, Palava <br />
+            By Lodha Group
           </span>
 
           <!-- Details Card -->
           <div class="of-box offer-bg-animation mb-1">
-            <span class="offer-text"> LAUNCHING "MIAMI" </span>
+            <span class="offer-text"> LAUNCHING LUXURY VILLAS </span>
           </div>
           <!-- Offer Colored Box -->
           <span class="d-block mb-1 text-capitalize of-box offer-bg-animation">
             <span class="offer-text-outer">
               <span class="offer-text">
-                Spot Booking Offers <br />
-                Avail Special Launch Offers <br />
-                Exciting Spin The Wheel Offer At Site
+                New Land Parccel Coming Soon <br />
+                Limited Period Opportunity <br />
+                An Elite Collection Offering <br />
+                Payment plan - 25:25:50
               </span>
             </span>
           </span>
-          <span class="info-tag-line p-2"> Luxurious 2, 3 & 4 BHK Starts </span>
-          <span class="info-price pb-3">₹ 95 Lakhs* Onwards </span>
+          <span class="info-tag-line p-2">
+            Luxurious Villa Plots Starts From
+          </span>
+          <span class="info-price pb-3">₹ 3.2 Cr. Onwards </span>
 
           <button
             class="pro-button effectMoveGradient"
@@ -356,10 +358,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               </li>
               <li class="nav-item ps-1">
                 <a
-                  onclick="return gtag_report_conversion('tel:+919653464447');"
-                  href="tel:+919653464447"
+                  onclick="return gtag_report_conversion('tel:+919999998888');"
+                  href="tel:+919999998888"
                   class="text-decoration-none text-white">
-                  <i class="fa-solid fa-phone me-2"></i> +919653464447
+                  <i class="fa-solid fa-phone me-2"></i> +919999998888
                 </a>
               </li>
             </ul>
@@ -453,34 +455,26 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               </form>
             </div>
           </div>
-          <br />
-          <div>
-            <img
-              class="img-fluid p-2 scale-up-center"
-              src="img/extras/ola-uber-tagline.jpg"
-              alt="" />
-          </div>
         </div>
       </aside>
 
       <!--Overview Section  -->
       <section id="overview" class="container p-4 shadow-sm">
-        <h3 class="section-heading">Sai World City</h3>
+        <h3 class="section-heading">Lodha Villa Royale</h3>
         <p class="overview-para">
-          Where quality of life is at its peak. Where serene green environs
-          compliment the nature's beauty. Where leisure time becomes the best
-          family time and lifestyle incarnates the cosmopolitan life with famous
-          landmarks of the world surrounding you. An unparalleled living, where
-          the feeling of being alive is awesome, making every moment, a memory
-          of a lifetime. A host of enlivening entertainment from across the
-          world. A paradise of supreme health facilities ensuring the complete
-          well-being. Where fashion & glitterati is around every corner. And
-          standard of living is at par with the world, ensuring best of
-          grandeur, class, security, safety and conveniences. Here is an
-          incredible global offering from India to the world that is
-          accumulating universal lifestyle embellishments at world's newest
-          destination called Sai World City at Panvel. Presenting a living that
-          creates a world within a world, a living that makes you truly global.
+          Presenting a rare, limited period opportunity for you - Lodha Villa
+          Royale: your exclusive land in a gated community within MMR - an Elite
+          Collection offering. 'Your own villa on your own land, in a gated
+          community with the security and amenities by Lodha' There is an
+          ultimate sense of pride, exclusivity and success in villa ownership-
+          it's the pinnacle of independent living and a privilege for the select
+          few such as you. Located on Central Avenue, Palava - an International
+          City with an Indian Heart that's crafted to provide high quality of
+          life at par with any global planned city. The city that is spread over
+          4500 acres presents a beautiful blend of ready world-class
+          infrastructure like a FIFA standard football ground, a 9-hole golf
+          course, cricket stadium, badminton, squash, tennis courts, 5
+          operational schools, Olympic Sports Complex and so much more.
         </p>
 
         <div class="m-4">
@@ -496,34 +490,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
         <!-- Highlights -->
         <h3 class="section-heading">Highlights</h3>
-        <div
-          class="row mr0 aos-init aos-animate mt-2"
-          data-aos="fade-up"
-          data-aos-delay="600"
-          data-aos-duration="3000">
+        <div class="row mt-2">
           <div class="col-md-6">
             <ul class="whybuy">
-              <li><span>Ready-to-move-in homes available </span></li>
-              <li>
-                <span>Township with a world-class lifestyle </span>
-              </li>
-              <li>
-                <span>
-                  A community lifestyle inspired by famous world cities
-                </span>
-              </li>
+              <li><span>1 </span></li>
+              <li><span>2 </span></li>
+              <li><span>3</span></li>
             </ul>
           </div>
           <div class="col-md-6">
             <ul class="whybuy">
-              <li><span>32-acre mega township</span></li>
-              <li><span>Swimming Pool with Party Deck</span></li>
-              <li>
-                <span
-                  >Club Vegas - G+5 storeyed Luxurious 45000sq.ft.
-                  Clubhouse</span
-                >
-              </li>
+              <li><span>4</span></li>
+              <li><span>5</span></li>
+              <li><span>6</span></li>
             </ul>
           </div>
         </div>
@@ -541,10 +520,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <thead>
                   <tr>
                     <th scope="col" class="border border-bottom-0 mb-w">
-                      Type
+                      Plot Type
                     </th>
                     <th scope="col" class="border border-bottom-0 mb-w">
-                      Carpet Area
+                      Plot Area
                     </th>
                     <th
                       scope="col"
@@ -558,14 +537,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   <tr>
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-type">
-                      2 BHK
+                      GRAND
                     </td>
 
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-carpet">
-                      625 -740 Sq.ft
+                      250 SQ. YARDS
                     </td>
-                    <td class="price-amt">₹ 95 Lakhs* Onwards</td>
+                    <td class="price-amt">₹3.2 Cr. Onwards</td>
 
                     <td>
                       <button
@@ -580,33 +559,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   <tr>
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-type">
-                      2.5 BHK
+                      ULTIMATE
                     </td>
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-carpet">
-                      1050 Sq.ft.
+                      350 SQ. YARDS
                     </td>
-                    <td class="price-amt">₹ On Request</td>
-                    <td>
-                      <button
-                        class="btn btn-sm btn-info effectGradient effectScale enqModal"
-                        data-bs-toggle="modal"
-                        data-bs-target="#popupModal">
-                        Price Breakup
-                      </button>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td
-                      class="border border-left-0 border-top-0 border-bottom-0 price-type">
-                      3 BHK
-                    </td>
-                    <td
-                      class="border border-left-0 border-top-0 border-bottom-0 price-carpet">
-                      1212 - 1350 Sq.ft
-                    </td>
-                    <td class="price-amt">₹ On Request</td>
+                    <td class="price-amt">₹4.2 Cr. Onwards</td>
                     <td>
                       <button
                         class="btn btn-sm btn-info effectGradient effectScale"
@@ -620,13 +579,33 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   <tr>
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-type">
-                      4 BHK
+                      SUPREME
                     </td>
                     <td
                       class="border border-left-0 border-top-0 border-bottom-0 price-carpet">
-                      1636 - 1900 Sq.ft
+                      450 SQ. YARDS
                     </td>
-                    <td class="price-amt">₹ On Request</td>
+                    <td class="price-amt">₹ 5.05 Cr. Onwards</td>
+                    <td>
+                      <button
+                        class="btn btn-sm btn-info effectGradient effectScale"
+                        data-bs-toggle="modal"
+                        data-bs-target="#popupModal">
+                        Price Breakup
+                      </button>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td
+                      class="border border-left-0 border-top-0 border-bottom-0 price-type">
+                      PRESIDENTIAL
+                    </td>
+                    <td
+                      class="border border-left-0 border-top-0 border-bottom-0 price-carpet">
+                      600 SQ. YARDS
+                    </td>
+                    <td class="price-amt">₹ 7.2 Cr. Onwards</td>
                     <td>
                       <button
                         class="btn btn-sm btn-info effectGradient effectScale"
@@ -639,11 +618,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </tbody>
               </table>
             </div>
-
-            <ul class="mt-1">
-              <li>Phase 1 @ ₹1.18 Cr onwards (All Inc.)</li>
-              <li>Phase 2 @ ₹1.10 Cr onwards (All Inc.)</li>
-            </ul>
           </div>
 
           <!--Costing Image  -->
@@ -1253,16 +1227,16 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       <ul class="nav nav-fill action-footer">
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('https://wa.me/+919653464447');"
-            href="https://wa.me/+919653464447"
+            onclick="return gtag_report_conversion('https://wa.me/+919999998888');"
+            href="https://wa.me/+919999998888"
             class="text-decoration-none text-white">
             <i class="fa-brands fa-whatsapp nav-icon"> </i> Whatsapp
           </a>
         </li>
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('tel:+919653464447');"
-            href="tel:+919653464447"
+            onclick="return gtag_report_conversion('tel:+919999998888');"
+            href="tel:+919999998888"
             class="text-decoration-none text-white">
             <i class="fa-solid fa-phone me-2"></i> Call Us
           </a>
