--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
       <!--Floor Plans Section -->
       <section id="floor-plan" class="container p-4 shadow-sm">
-        <h3 class="section-heading">Site & Floor Plan</h3>
+        <h3 class="section-heading">Site & Plots Plan</h3>
 
         <!-- Floor Plans Images -->
         <div class="mt-3">
@@ -664,7 +664,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="overlay-container">
                   <img
                     class="img-fluid floor-img"
-                    src="img/plans/floor01.jpg"
+                    src="img/plans/masterplan.jpg"
                     alt="2BHK" />
                   <div class="overlay-slider-bottom"></div>
                   <div
@@ -676,7 +676,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </div>
                 <!-- Property Description -->
                 <div class="at-property-dis effectGradient text-center p-1">
-                  <h5>2 BHK</h5>
+                  <h5>MASTER PLAN</h5>
                 </div>
               </div>
 
@@ -687,7 +687,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="overlay-container">
                   <img
                     class="img-fluid floor-img"
-                    src="img/plans/floor02.jpg"
+                    src="img/plans/floor01.jpg"
                     alt="" />
                   <div class="overlay-slider-bottom"></div>
                   <div
@@ -700,7 +700,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
                 <!-- Property Description -->
                 <div class="at-property-dis effectGradient text-center p-1">
-                  <h5>3 BHK</h5>
+                  <h5>PLAN 1</h5>
                 </div>
               </div>
 
@@ -711,7 +711,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="overlay-container">
                   <img
                     class="img-fluid floor-img"
-                    src="img/plans/floor03.jpg  "
+                    src="img/plans/floor02.jpg  "
                     alt="" />
                   <div class="overlay-slider-bottom"></div>
                   <div
@@ -724,7 +724,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
                 <!-- Property Description -->
                 <div class="at-property-dis effectGradient text-center p-1">
-                  <h5>4 BHK</h5>
+                  <h5>PLAN 2</h5>
                 </div>
               </div>
             </div>
