Completed : Home Page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lodha Villa Royale</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/extras/favicon.webp" sizes="16x16" />
+    <link rel="icon" href="img/extras/favicon.png" sizes="16x16" />
 
     <!-- Bootstrap CDN -->
     <link
@@ -742,76 +742,37 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="owl-carousel owl-theme">
           <div class="item">
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/external/dancestudio.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/1.jpg" alt="" />
             </div>
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/external/designersalon.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/2.jpg" alt="" />
             </div>
           </div>
 
           <div class="item">
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/internal/banquethall.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/3.jpg" alt="" />
             </div>
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/internal/spa.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/4.jpg" alt="" />
             </div>
           </div>
 
           <div class="item">
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/external/saladbar.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/5.jpg" alt="" />
             </div>
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/internal/indoorgames.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/6.jpg" alt="" />
             </div>
           </div>
 
           <div class="item">
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/external/footmassage.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/7.jpg" alt="" />
             </div>
             <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/external/djkaraokeroom.jpg"
-                alt="" />
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/internal/library.jpg"
-                alt="" />
-            </div>
-            <div class="carousel-image my-2">
-              <img
-                class="img-fluid"
-                src="img/amenities/internal/meditationroom.jpg"
-                alt="" />
+              <img class="img-fluid" src="img/amenities/8.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -859,42 +820,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 data-fancybox="gallery-a"
                 alt="" />
             </div>
-
-            <div class="col-md-3 g-3 gal-img">
-              <img
-                class="img-fluid floor-img"
-                src="img/gallery/gallery05.jpg"
-                data-src="img/gallery/gallery05.jpg"
-                data-fancybox="gallery-a"
-                alt="" />
-            </div>
-
-            <div class="col-md-3 g-3 gal-img">
-              <img
-                class="img-fluid floor-img"
-                src="img/gallery/gallery06.jpg"
-                data-src="img/gallery/gallery06.jpg"
-                data-fancybox="gallery-a"
-                alt="" />
-            </div>
-
-            <div class="col-md-3 g-3 gal-img">
-              <img
-                class="img-fluid floor-img"
-                src="img/gallery/gallery07.jpg"
-                data-src="img/gallery/gallery07.jpg"
-                data-fancybox="gallery-a"
-                alt="" />
-            </div>
-
-            <div class="col-md-3 g-3 gal-img">
-              <img
-                class="img-fluid floor-img"
-                src="img/gallery/gallery08.jpg"
-                data-src="img/gallery/gallery08.jpg"
-                data-fancybox="gallery-a"
-                alt="" />
-            </div>
           </div>
         </div>
       </section>
@@ -909,7 +834,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <!-- Map Iframe -->
             <div class="col-md-12">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120742.35597054644!2d73.04304687734587!3d18.96683348672915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7e7b1c4bf9485%3A0xde2ff6b4d8743963!2sSAI%20WORLD%20CITY!5e0!3m2!1sen!2sin!4v1706181749961!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d30136.395881888922!2d73.050518!3d19.236675000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bf812f0d0a01%3A0x618beb33b332d79b!2sLodha%20Villa%20Royale!5e0!3m2!1sen!2sin!4v1707982124339!5m2!1sen!2sin"
                 width="100%"
                 height="300"
                 style="border: 0"
@@ -921,182 +846,35 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           </div>
         </div>
         <div class="location_features_section m-3">
-          <div>
-            <!-- Nav Links Location -->
-            <ul class="nav nav-pills mb-3" id="pills-tabloc" role="tablist">
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase ami-tab active"
-                  id="pills-loc-0"
-                  data-bs-toggle="pill"
-                  data-bs-target="#loc-0"
-                  role="tab"
-                  aria-controls="loc-0"
-                  aria-selected="true">
-                  CONNECTIVITY
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase ami-tab"
-                  id="pills-loc-1"
-                  data-bs-toggle="pill"
-                  data-bs-target="#loc-1"
-                  role="tab"
-                  aria-controls="loc-1"
-                  aria-selected="false">
-                  EDUCATIONAL INSTITUTIONS
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase ami-tab"
-                  id="pills-loc-2"
-                  data-bs-toggle="pill"
-                  data-bs-target="#loc-2"
-                  role="tab"
-                  aria-controls="loc-2"
-                  aria-selected="false">
-                  HOSPITAL
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase ami-tab"
-                  id="pills-loc-3"
-                  data-bs-toggle="pill"
-                  data-bs-target="#loc-3"
-                  role="tab"
-                  aria-controls="loc-3"
-                  aria-selected="false">
-                  RETAIL
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Features Tab Content -->
-          <div class="tab-content" id="pills-tablocContent">
-            <div
-              class="tab-pane fade show active"
-              id="loc-0"
-              role="tabpanel"
-              aria-labelledby="pills-loc-0"
-              tabindex="0">
-              <!-- Connectivity Features -->
-              <div class="container locaton-features">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Navi Mumbai International Airport (NMIA)
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Virar-Alibaug Multimodal Corridor (VAMC)
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Mumbai-Pune Expressway
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Panvel-Karjat Suburban Railway
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Jawaharlal Nehru Port Trust (JNPT)
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    CST- Panvel
-                  </div>
-                </div>
-              </div>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Eastern Express Highway - 20 mins
             </div>
 
-            <div
-              class="tab-pane fade"
-              id="loc-1"
-              role="tabpanel"
-              aria-labelledby="pills-loc-1"
-              tabindex="1">
-              <!-- Educational Features -->
-              <div class="container locaton-features">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    DAV Public School
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Amity University
-                  </div>
-
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    MGM College of Medical & Engineering
-                  </div>
-                </div>
-              </div>
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Mankoli Bridge - 13 mins
             </div>
 
-            <div
-              class="tab-pane fade"
-              id="loc-2"
-              role="tabpanel"
-              aria-labelledby="pills-loc-2"
-              tabindex="2">
-              <!-- Hospital Features -->
-              <div class="container locaton-features">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    MGM Hospital
-                  </div>
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Lifeline Hospital
-                  </div>
-                </div>
-              </div>
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Thane Dombivli Link Road - 5 mins
             </div>
 
-            <div
-              class="tab-pane fade"
-              id="loc-3"
-              role="tabpanel"
-              aria-labelledby="pills-loc-3"
-              tabindex="3">
-              <!-- Retail Features -->
-              <div class="container locaton-features">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Orion Mall
-                  </div>
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    PVR Cinemas
-                  </div>
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Big Bazaar
-                  </div>
-                  <div class="col my-2">
-                    <i class="fa-solid fa-location-dot"></i>
-                    D Mart
-                  </div>
-                </div>
-              </div>
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Singhania School - 20 mins
+            </div>
+
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Mumbai Nashik Highway - 8 mins
+            </div>
+
+            <div class="col my-2">
+              <i class="fa-solid fa-location-dot"></i>
+              Viviana Mall - 15 mins
             </div>
           </div>
         </div>
@@ -1114,7 +892,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   data-bs-toggle="modal"
                   data-bs-target="#popupModal"></i>
                 <h3 class="fs-1">Virtual Visit</h3>
-                <h5>Sai World City</h5>
+                <h5>Lodha Villa Royale</h5>
               </div>
             </div>
           </div>
@@ -1126,16 +904,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container w-100 mt-2">
           <p class="fs-5 fw-bold text-center">About Paradise Group</p>
           <p class="about-text">
-            It's been a long yet fruitful journey for Paradise Group. We began
-            more than three decades ago with a clear aim of providing lavish and
-            appealing spaces for all to dwell. We have come a long way after
-            constructing more than 100 successful projects across Navi Mumbai as
-            of today's date. This rendezvous of more than 30 years has made us a
-            team of highly experienced construction experts. Keeping abreast
-            with the latest technology and implementation of world-class
-            techniques are the reasons why our structures are not just
-            luxuriously designed marvels, but also perfect specimens of 'beauty
-            with quality'.
+            One of India's leading real estate firms, the Lodha Group is
+            renowned for building urban dream homes that offer refined living.
+            The developer caters to all segments, from luxury to budget
+            residences and has built iconic landmarks all across Mumbai, Thane,
+            and Navi Mumbai. Lodha properties are known to feature quality
+            interiors, state-of-the-art amenities, vast open spaces, and
+            manicured green landscapes. A few of their standout properties are
+            Lodha World Towers in Lower Parel, Lodha Palava in Dombivli, Lodha
+            Crown in Thane, and Lodha Bellagio in Powai.
           </p>
           <p class="fs-5 fw-bold text-center">RERA Information</p>
           <div class="container text-center">
@@ -1165,10 +942,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <span class="text-center">
           Disclaimer : The information provided on this website is intended
           exclusively for informational purposes and managed by a RERA
-          authorized real estate agent namely Mr. Ramesh Gulabani. This Website
-          Is Not An Official Site And It Belongs To The Authorized Marketing
-          Partner For Information Purpose Only And Does Not Constitute An Offer
-          To Avail Any Service.
+          authorized real estate agent namely Mr. ------. This Website Is Not An
+          Official Site And It Belongs To The Authorized Marketing Partner For
+          Information Purpose Only And Does Not Constitute An Offer To Avail Any
+          Service.
         </span>
         <span id="dots20" style="display: inline"></span>
         <span id="more20" style="display: none">
